fix - adjusts whitespace around role summary

--- a/styles/CV.module.scss
+++ b/styles/CV.module.scss
@@ -243,10 +243,12 @@
 
       p {
         font-size: 0.8rem;
-        margin: 0.2rem;
+        margin: 0.5rem 0rem;
+        
       }
 
       ul {
+        margin: 0;
         padding-inline-start: 1rem;
       }
     }
